syntax = "proto3";

option java_package = "org.apache.skywalking.banyandb";
option go_package = "github.com/apache/skywalking-banyandb/api/proto/banyandb/v1;v1";

package banyandb.v1;

import "google/protobuf/timestamp.proto";

message Node {
  string id = 1;
  string addr = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Shard {
  uint64 id = 1;
  Metadata series = 2;
  Node node = 3;
  uint32 total = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp created_at = 6;
}

enum Action {
  Put = 0;
  Delete = 1;
}

message ShardEvent {
  Shard shard = 1;
  Action action = 2;
  google.protobuf.Timestamp time = 3;
}

message SeriesEvent {
  Metadata series = 1;
  repeated string field_names_composite_series_id = 2;
  Action action = 3;
  google.protobuf.Timestamp time = 4;
}

// Metadata is for multi-tenant, multi-model use
message Metadata {
  // group contains a set of options, like retention policy, max
  string group = 1;
  // name of the entity
  string name = 2;
}